--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Make, share, and evaluate estimates of things",
   "main": "index.js",
   "scripts": {
-    "_build": "BUILD_DEV=0 API_ENV=production SEGMENT_API_ENV=production webpack && cp src/_redirects public/_redirects",
+    "_copy_files": "cp src/_redirects public/_redirects && cp src/sitemap.xml public/sitemap.xml",
+    "_build": "BUILD_DEV=0 API_ENV=production SEGMENT_API_ENV=production webpack && npm run _copy_files",
     "_stage": "surge -p public -d test.getguesstimate.com",
     "start": "BUILD_DEV=1 NODE_ENV=development API_ENV=development SEGMENT_API_ENV=development webpack-dev-server",
     "start-production": "BUILD_DEV=1 NODE_ENV=development API_ENV=production SEGMENT_API_ENV=development webpack-dev-server",
